@@ -26,7 +26,7 @@
   "Read the name of a class and show its subclasses."
   (interactive (list (slime-read-symbol-name "Class Name: ")))
   (slime-call-with-browser-setup 
-   "*slime class browser*" (slime-current-package) "Class Browser"
+   (slime-buffer-name :browser) (slime-current-package) "Class Browser"
    (lambda ()
      (widget-create 'tree-widget :tag name 
                     :expander 'slime-expand-class-node 
@@ -96,7 +96,7 @@ DSPEC can be used to expand the node."
                                           '(":callers" ":callees" ":calls"))
                                 nil t ":"))))
   (slime-call-with-browser-setup 
-   "*slime xref browser*" (slime-current-package) "Xref Browser"
+   (slime-buffer-name :xref) (slime-current-package) "Xref Browser"
    (lambda ()
      (widget-create 'tree-widget :tag name :xref-type type :xref-dspec name 
                     :expander 'slime-expand-xrefs :has-echildren t))))
