@@ -1,3 +1,8 @@
+2010-05-05  Stas Boukarev  <stassats@gmail.com>
+
+	* Make buffer names more consistent.
+	Patch by Leo Liu.
+
 2010-05-05  Helmut Eller  <heller@common-lisp.net>
 
 	* swank-cmucl.lisp (gdb-command): Use gdb's MI.
